src/tests/code/pass/pass_operator_combined_assignment_multiplication.u
entrypoint:~()
{
	iErrorCode:~i64{4};
	foo:~f64{0.5};
	foo *=4.0;	// 2.0
	iErrorCode *= i64{foo};
}
->(iErrorCode)