src/tests/code/fail/fail_multiline_comment_unclosed.u
entrypoint: ~()->(iErrorCode:~i64{1})
{
	iErrorCode := 1; 
	/* multiline
	comment*/

	iErrorCode := 256;
}

/*
forget to end comment ouside of function 
so that it is the lexer and not the parser resulting in the error
